# environment-sensor-software

./: .ci.yml  .gitignore  README.md
.github/workflows/: ci.yml  test-readme.yml
firmware/: .ci.yml  .clang-format  CMakeLists.txt  app.overlay  ci.sh  ft232r_jtag.cfg  ft4232h_jtag.cfg  prj.conf  west.yml
firmware/src/: fram.cpp  fram.h  fram_buffer.h  main.cpp  rtc.cpp  rtc.h  sensors.cpp  sensors.h  user_config.cpp  user_config.h
firmware/tests/: complex_tests.robot  create_boards.resc  print_data_to_stdout.py  simple_tests.robot  stm32g474.repl
monitor/: .ci.yml  antenvsens_monitor.py  ci.sh  pyproject.toml  requirements.txt
monitor/tests/: disconnect_envsens_during_reading.py  launch_monitor_with_tty_in_use.py  multinode.robot  sensor_board.repl
